feat: add hello world vuejs app

--- a/package.json
+++ b/package.json
@@ -1,29 +1,47 @@
 {
-  "name": "frontend-docker-starter-kit",
+  "name": "vue-docker-starter-kit",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "serve": "echo 'your serve script here'",
-    "build": "echo 'your build script here'",
-    "test": "echo 'your test script here'"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint"
   },
-  "dependencies": {},
-  "devDependencies": {},
-  "description": "A template to start frontend projects with docker.",
-  "main": "index.js",
+  "description": "A template to start vuejs projects with docker.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fredicious/frontend-docker-starter-kit.git"
+    "url": "git+https://github.com/fredicious/vue-docker-starter-kit.git"
   },
   "keywords": [
-    "frontend",
+    "vue",
     "docker",
     "starter-kit"
   ],
   "author": "@fredicious (Frederic Cabassut)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/fredicious/frontend-docker-starter-kit/issues"
+    "url": "https://github.com/fredicious/vue-docker-starter-kit/issues"
   },
-  "homepage": "https://github.com/fredicious/frontend-docker-starter-kit#readme"
+  "homepage": "https://github.com/fredicious/vue-docker-starter-kit#readme",
+  "dependencies": {
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.3.1",
+    "@vue/cli-plugin-eslint": "~4.3.1",
+    "@vue/cli-plugin-unit-jest": "~4.3.1",
+    "@vue/cli-service": "~4.3.1",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/test-utils": "1.0.0-beta.33",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.13.1",
+    "prettier": "^2.0.4",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11"
+  }
 }
